RbA Build/src/objects/Resource__c.object
<CustomObject>
    <description>Used to hold details about the recourse for scheduling</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>By default when a Resource is created they will be Active. Will be marked as inactive when any one of the liability insurance expires.</description>
        <inlineHelpText>Is this resource active?</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Insurance_Expiration_Date__c</fullName>
        <formula>RbA_User__r.Contact.Account.Auto_Liab_Expire_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulled from RbA User Account info</inlineHelpText>
        <label>Auto Insurance Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Available_Time_Window__c</fullName>
        <label>Available Time Window</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Crew_Size__c</fullName>
        <label>Crew Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duplicate_Value_Catcher__c</fullName>
        <caseSensitive>true</caseSensitive>
        <inlineHelpText>This is updated via workflow.  You cannot have the same resource/user record with different resource types.</inlineHelpText>
        <label>Duplicate Value Catcher</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>General_Insurance_Expiration_Date__c</fullName>
        <formula>RbA_User__r.Contact.Account.General_Liab_Expire_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulled from RbA User Account info</inlineHelpText>
        <label>General Insurance Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inactive_Date__c</fullName>
        <formula>IF( 
AND( 
ISBLANK(Auto_Insurance_Expiration_Date__c), 
ISBLANK(General_Insurance_Expiration_Date__c), 
ISBLANK(Work_Comp_Insurance_Expiration_Date__c) 
), 
NULL, 
TODAY()- 
MAX( 
TODAY()- BLANKVALUE(Auto_Insurance_Expiration_Date__c, DATE(2999, 01, 01)), 
TODAY()- BLANKVALUE(General_Insurance_Expiration_Date__c, DATE(2999, 01, 01)), 
TODAY()- BLANKVALUE(Work_Comp_Insurance_Expiration_Date__c, DATE(2999, 01, 01)) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Date this resource&apos;s insurance expires - the earliest of the three insurance dates. 7 days after this date, this resource will be marked inactive.</inlineHelpText>
        <label>Inactive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inactive_Reason__c</fullName>
        <label>Inactive Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Insurance Expiration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Longer an Employee</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <formula>RbA_User__r.Contact.Account.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pivotal_Id__c</fullName>
        <externalId>true</externalId>
        <label>Pivotal Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <label>Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RbA_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Enter individual for Tech Measure. Enter Crew name for Installer</inlineHelpText>
        <label>RbA User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Resources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resource_Type__c</fullName>
        <label>Primary Resource Type</label>
        <picklist>
            <picklistValues>
                <fullName>Tech Measure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Install Crew</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduler</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Retail_Location_Formula__c</fullName>
        <formula>Retail_Location__r.Store__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Retail Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Store Configuration</label>
        <referenceTo>Store_Configuration__c</referenceTo>
        <relationshipLabel>Resources</relationshipLabel>
        <relationshipName>Resources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Secondary_Resource_Type_s__c</fullName>
        <inlineHelpText>For any resource with multiple types, you may select any other type they may be.</inlineHelpText>
        <label>Secondary Resource Type(s)</label>
        <picklist>
            <picklistValues>
                <fullName>Tech Measure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Install Crew</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduler</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>User_Type__c</fullName>
        <inlineHelpText>Indicate whether the user (resource) is an internal or external user. Internal users do not have inactive dates based on insurance expiration. Plays a role in Labor, whether user should be entering hours or dollars.</inlineHelpText>
        <label>User Type</label>
        <picklist>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vendor_Account_Id__c</fullName>
        <description>Used for automation purposes</description>
        <formula>RbA_User__r.Contact.AccountId</formula>
        <label>Vendor Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Comp_Insurance_Expiration_Date__c</fullName>
        <formula>RbA_User__r.Contact.Account.WorkComp_EmplLiab_ExpireDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulled from RbA User Account info</inlineHelpText>
        <label>Work Comp Insurance Expiration Date</label>
        <type>Date</type>
    </fields>
    <label>Resource</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Resource_Type__c</columns>
        <columns>Secondary_Resource_Type_s__c</columns>
        <columns>User_Type__c</columns>
        <columns>RbA_User__c</columns>
        <columns>Duplicate_Value_Catcher__c</columns>
        <columns>Retail_Location__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Demo_Resources</fullName>
        <columns>NAME</columns>
        <columns>Resource_Type__c</columns>
        <columns>Crew_Size__c</columns>
        <columns>Retail_Location_Formula__c</columns>
        <columns>RbA_User__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Retail_Location_Formula__c</field>
            <operation>equals</operation>
            <value>Demo Store - BW</value>
        </filters>
        <label>Demo Resources</label>
    </listViews>
    <nameField>
        <label>Resource Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>